--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <aside class="externalResourcesNav">
     <div class="externalResources"> <a href="#" title="Download CV Link">DOWNLOAD CV</a> </div>
     <span class="stretch"></span>
-    <div class="externalResources"><a href="#" title="Behance Link">BEHANCE</a> </div>
+    <div class="externalResources"><a href="portfolio.html">PORTFOLIO</a></div>
     <span class="stretch"></span>
     <div class="externalResources"><a href="#" title="Github Link">GITHUB</a> </div>
   </aside>
