--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <header>
   <div class="profileLogo"> 
     <!-- Profile logo. Add a img tag in place of <span>. -->
-    <p class="logoPlaceholder"><h1>V</h1><span>C</span></p>
+    <p class="logoPlaceholder"><div><h1>V</h1><span>C</span></p></div>
   </div>
   <div class="profilePhoto"> 
     <!-- Profile photo --> 
