--- a/Dreamweaver2/Untitled-2.html
+++ b/Dreamweaver2/Untitled-2.html
@@ -1,11 +1,10 @@
 <!doctype html>
 <html>
-	<link href="/images/VC-AD-1.svg" rel="icon" type="image/x-icon" sizes="16x16" />
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>About Page template By Adobe Dreamweaver CC</title>
-<link href="AboutPageAssets/styles/aboutPageStyle.css" rel="stylesheet" type="text/css">
+<link href="../AboutPageAssets/styles/aboutPageStyle.css" rel="stylesheet" type="text/css">
 
 <!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
 <script>var __adobewebfontsappname__="dreamweaver"</script><script src="http://use.edgefonts.net/montserrat:n4:default;source-sans-pro:n2:default.js" type="text/javascript"></script>
@@ -16,15 +15,14 @@
 <header>
   <div class="profileLogo"> 
     <!-- Profile logo. Add a img tag in place of <span>. -->
-  
-<img src="images/Canvas.svg" width="250" height="250" alt=""/>
-<div></div>
-  
-	
-<!-- Identity details -->
+    <p class="logoPlaceholder"><!-- <img src="logoImage.png" alt="sample logo"> --><span>LOGO</span></p>
+  </div>
+  <div class="profilePhoto"> 
+    <!-- Profile photo --> 
+    <img src="../AboutPageAssets/images/profilephoto.png" alt="sample"> </div>
+  <!-- Identity details -->
   <section class="profileHeader">
-    <h1>About VC</h1>
-    <hr>
+    <h1>JOHN DOE</h1>
     <h3>REALLY AWESOME WEB DESIGNER</h3>
     <hr>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in.</p>
@@ -33,23 +31,23 @@
   <aside class="socialNetworkNavBar">
     <div class="socialNetworkNav"> 
       <!-- Add a Anchor tag with nested img tag here --> 
-      <img src="images/code-icong-gif.gif" alt="sample" width="120" height="93"> </div>
+      <img src="../AboutPageAssets/images/social.png" alt="sample"> </div>
     <div class="socialNetworkNav"> 
       <!-- Add a Anchor tag with nested img tag here --> 
-      <img src="images/support-icon2.png"  alt="sample" width="120"> </div>
+      <img src="../AboutPageAssets/images/social.png"  alt="sample"> </div>
     <div class="socialNetworkNav"> 
       <!-- Add a Anchor tag with nested img tag here --> 
-      <img src="images/Head2.png"  alt="sample" width="100"> </div>
+      <img src="../AboutPageAssets/images/social.png"  alt="sample"> </div>
     <div class="socialNetworkNav"> 
       <!-- Add a Anchor tag with nested img tag here --> 
-      <img src="images/scope.gif"  alt="sample" width="130"> </div>
-</aside>
+      <img src="../AboutPageAssets/images/social.png"  alt="sample"> </div>
+  </aside>
 </header>
 <!-- content -->
 <section class="mainContent"> 
   <!-- Contact details -->
   <section class="section1">
-    <h2 class="sectionTitle">Information</h2>
+    <h2 class="sectionTitle">Content Holder 1</h2>
     <hr class="sectionTitleRule">
     <hr class="sectionTitleRule2">
     <div class="section1Content">
@@ -61,7 +59,7 @@
   </section>
   <!-- Previous experience details -->
   <section class="section2">
-    <h2 class="sectionTitle">Recent Projects </h2>
+    <h2 class="sectionTitle">Content Holder 2</h2>
     <hr class="sectionTitleRule">
     <hr class="sectionTitleRule2">
     <!-- First Title & company details  -->
@@ -82,7 +80,7 @@
   <aside class="externalResourcesNav">
     <div class="externalResources"> <a href="#" title="Download CV Link">DOWNLOAD CV</a> </div>
     <span class="stretch"></span>
-    <div class="externalResources"><a href="portfolio.html">PORTFOLIO</a></div>
+    <div class="externalResources"><a href="#" title="Behance Link">BEHANCE</a> </div>
     <span class="stretch"></span>
     <div class="externalResources"><a href="#" title="Github Link">GITHUB</a> </div>
   </aside>
