updates with positions
absolute

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="profileLogo"> 
     <!-- Profile logo. Add a img tag in place of <span>. -->
   
-<img src="images/Canvas.svg" width="250" height="250" alt=""/>
+<img src="images/Canvas.svg" width="30%" height="" alt=""/>
 <div></div>
   
 	
@@ -33,16 +33,20 @@
   <aside class="socialNetworkNavBar">
     <div class="socialNetworkNav"> 
       <!-- Add a Anchor tag with nested img tag here --> 
-      <img src="images/code-icong-gif.gif" alt="sample" width="120" height="93"> </div>
+      <div><img src="images/code-icong-gif.gif"  position="absolute" width="100%" height=""></div>
+    </div>
     <div class="socialNetworkNav"> 
       <!-- Add a Anchor tag with nested img tag here --> 
-      <img src="images/support-icon2.png"  alt="sample" width="120"> </div>
+      <div><img src="images/support-icon2.png" position="absolute" width="100%"></div>
+    </div>
     <div class="socialNetworkNav"> 
       <!-- Add a Anchor tag with nested img tag here --> 
-      <img src="images/Head2.png"  alt="sample" width="100"> </div>
+      <div><img src="images/Head2.png" position="absolute" width="100%"></div>
+    </div>
     <div class="socialNetworkNav"> 
       <!-- Add a Anchor tag with nested img tag here --> 
-      <img src="images/scope.gif"  alt="sample" width="130"> </div>
+      <div><img src="images/scope.gif" position="absolute" width="100%"></div>
+    </div>
 </aside>
 </header>
 <!-- content -->
