--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   </section>
   <!-- Links to expore your past projects and download your CV -->
   <aside class="externalResourcesNav">
-    <div class="externalResources"> <a href="#" posision ="absolute" title="Download CV Link">DOWNLOAD CV</a> </div>
+    <div class="externalResources"> <a href="#" title="Download CV Link">DOWNLOAD CV</a> </div>
     <span class="stretch"></span>
     <div class="externalResources"><a href="portfolio.html">PORTFOLIO</a></div>
     <span class="stretch"></span>
