--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
 	  
 	  <div class="socialNetworkNav"> 
       <!-- Add a Anchor tag with nested img tag here --> 
-      <div><img src="images/code-icong-gif.gif"  position="absolute" width="100%" height=""></div>
+      <div><img src="images/code-icong-gif.gif"  width="20%" height=""></div>
     </div>
     <div class="socialNetworkNav"> 
       <!-- Add a Anchor tag with nested img tag here --> 
-      <div><img src="images/support-icon2.png" position="absolute" width="100%"></div>
+      <div><img src="images/support-icon2.png"  width="20%"></div>
     </div>
     <div class="socialNetworkNav"> 
       <!-- Add a Anchor tag with nested img tag here --> 
-      <div><img src="images/Head2.png" position="absolute" width="100%"></div>
+      <div><img src="images/Head2.png" align="center" width="20%"></div>
     </div>
     <div class="socialNetworkNav"> 
       <!-- Add a Anchor tag with nested img tag here --> 
-      <div><img src="images/scope.gif" position="absolute" width="100%"></div>
+      <div><img src="images/scope.gif" width="20%"></div>
     </div>
 </aside>
 </header>
