--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
     <div class="socialNetworkNav"> 
       <!-- Add a Anchor tag with nested img tag here --> 
-      <div><img src="images/Head2.png" align="center" width="20%"></div>
+      <div><img src="images/Head2.png" width="50%" align="center"></div>
     </div>
     <div class="socialNetworkNav"> 
       <!-- Add a Anchor tag with nested img tag here --> 
