--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
 	  
 	  <div class="socialNetworkNav"> 
       <!-- Add a Anchor tag with nested img tag here --> 
-      <div><img src="images/code-icong-gif.gif"  width="100%" height=""></div>
+      <div><img src="images/code-icong-gif.gif"  width="100%" height="">
     </div>
     <div class="socialNetworkNav"> 
       <!-- Add a Anchor tag with nested img tag here --> 
-      <div><img src="images/support-icon2.png"  width="100%"></div>
+      <div><img src="images/support-icon2.png"  width="100%">
     </div>
     <div class="socialNetworkNav"> 
       <!-- Add a Anchor tag with nested img tag here --> 
-      <div><img src="images/Head2.png" width="100%" align="center"></div>
+      <div><img src="images/Head2.png" width="100%" align="center">
     </div>
     <div class="socialNetworkNav"> 
       <!-- Add a Anchor tag with nested img tag here --> 
-      <div><img src="images/scope.gif" width="100%"></div>
+      <div><img src="images/scope.gif" width="100%">
     </div>
 </aside>
 </header>
