--- a/index.html
+++ b/index.html
@@ -1,101 +1,1 @@
-<!doctype html>
-<html>
-	<link href="/images/VC-AD-1.svg" rel="icon" type="image/x-icon" sizes="16x16" />
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>About Page template By Adobe Dreamweaver CC</title>
-<link href="AboutPageAssets/styles/aboutPageStyle.css" rel="stylesheet" type="text/css">
-
-<!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
-<script>var __adobewebfontsappname__="dreamweaver"</script><script src="http://use.edgefonts.net/montserrat:n4:default;source-sans-pro:n2:default.js" type="text/javascript"></script>
-</head>
-
-<body>
-<!-- Header content -->
-<header>
-  <div class="profileLogo"> 
-    <!-- Profile logo. Add a img tag in place of <span>. -->
-  
-<img src="images/Canvas.svg" width="30%" height="" alt=""/>
-<div></div>
-  
-	
-<!-- Identity details -->
-  <section class="profileHeader">
-    <h1>About VC</h1>
-    <hr>
-    <h3>REALLY AWESOME WEB DESIGNER</h3>
-    <hr>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in.</p>
-  </section>
-  <!-- Links to Social network accounts -->
-  <aside class="socialNetworkNavBar"> 
-	  
-	  <div class="socialNetworkNav"> 
-      <!-- Add a Anchor tag with nested img tag here --> 
-      <div><img src="images/code-icong-gif.gif"  width="100%" height="">
-    </div>
-    <div class="socialNetworkNav"> 
-      <!-- Add a Anchor tag with nested img tag here --> 
-      <div><img src="images/support-icon2.png"  width="100%">
-    </div>
-    <div class="socialNetworkNav"> 
-      <!-- Add a Anchor tag with nested img tag here --> 
-      <div><img src="images/Head2.png" width="100%" align="center">
-    </div>
-    <div class="socialNetworkNav"> 
-      <!-- Add a Anchor tag with nested img tag here --> 
-      <div><img src="images/scope.gif" width="100%">
-    </div>
-</aside>
-</header>
-<!-- content -->
-<section class="mainContent"> 
-  <!-- Contact details -->
-  <section class="section1">
-    <h2 class="sectionTitle">Information</h2>
-    <hr class="sectionTitleRule">
-    <hr class="sectionTitleRule2">
-    <div class="section1Content">
-      <p><span>Email :</span> johndoe@email.com</p>
-      <p><span>Website :</span> johndoe.com</p>
-      <p><span>Phone :</span> (123)456 - 789000</p>
-      <p><span>Address :</span> Anytown, Anycountry</p>
-    </div>
-  </section>
-  <!-- Previous experience details -->
-  <section class="section2">
-    <h2 class="sectionTitle">Recent Projects </h2>
-    <hr class="sectionTitleRule">
-    <hr class="sectionTitleRule2">
-    <!-- First Title & company details  -->
-    <article class="section2Content">
-      <h2 class="sectionContentTitle">Title & Company</h2>
-      <h3 class="sectionContentSubTitle">Position / Date - Year</h3>
-      <p class="sectionContent"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. </p>
-    </article>
-    <!-- Second Title & company details  -->
-    <article class="section2Content">
-      <h2 class="sectionContentTitle"> Title & Company</h2>
-      <h3 class="sectionContentSubTitle">Position / Date - Year</h3>
-      <p class="sectionContent"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. </p>
-    </article>
-    <!-- Replicate the above Div block to add more title and company details --> 
-  </section>
-  <!-- Links to expore your past projects and download your CV -->
-  <aside class="externalResourcesNav">
-    <div class="externalResources"> <a href="#" title="Download CV Link">DOWNLOAD CV</a> </div>
-    <span class="stretch"></span>
-    <div class="externalResources"><a href="portfolio.html">PORTFOLIO</a></div>
-    <span class="stretch"></span>
-    <div class="externalResources"><a href="#" title="Github Link">GITHUB</a> </div>
-  </aside>
-</section>
-<footer>
-  <hr>
-  <p class="footerDisclaimer">2014  Copyrights - <span>All Rights Reserved</span></p>
-  <p class="footerNote">John Doe - <span>Email me</span></p>
-</footer>
-</body>
-</html>
+<!doctype html><html><head>  <meta charset="utf-8">  <meta name="keywords" content="">  <meta name="description" content="">  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"><meta name="robots" content="index, follow">  <link rel="shortcut icon" type="image/png" href="favicon.png">  <link rel="stylesheet" type="text/css" href="./all.css?538">  <title>Home</title>  <!-- Analytics --> <!-- Analytics END -->  </head><body class="mob-disable-anim "><!-- Main container --><div class="page-container">  <!-- bloc-0 --><div class="bloc bgc-6684 l-bloc" id="bloc-0"><div class="container bloc-no-padding-lg bloc-no-padding"><div class="row namesizesmall"><div class="col text-start text-lg-center"><h1 class="mb-4 h1-style mt-lg-4 text-md-center text-sm-center text-center">Guy E. Talley</h1></div></div></div></div><!-- bloc-0 END --><!-- bloc-1 --><div class="bloc none bgc-6684 l-bloc sticky-nav" id="bloc-1"><div class="container bloc-no-padding-lg bloc-no-padding"><div class="row"><div class="text-lg-center col text-center"><ul class="list-unstyled mt-lg-3 listposition listpositionsm"><li><p><a class="activelink activelinksm" href="./">About</a></p></li><li><p><a href="./experience/">Experience</a></p></li><li><p><a href="./skills-and-awards/">Skills & Awards</a></p></li><li><p><a href="./e-learning-portfolio/">E-Learning Portfolio</a></p></li><li><p><a href="./education/">Education</a></p></li><li><p><a href="./contact/">Contact</a></p></li></ul></div></div></div></div><!-- bloc-1 END --><!-- bloc-2 --><div class="bloc l-bloc full-width-bloc movesiteup" id="bloc-2"><div class="container bloc-no-padding-lg bloc-no-padding-md bloc-no-padding-sm bloc-no-padding"><div class="row"><div class="col text-start mb-lg-4 mb-md-4 columnposition1 columnmove1"><div class="divider-h"></div></div></div></div></div><!-- bloc-2 END --><!-- bloc-1 --><div class="bloc l-bloc" id="bloc-1"><div class="container bloc-no-padding-lg bloc-no-padding formposition"><div class="row"><div class="col text-start boxwrapper mt-sm-4"><p class="mt-lg-3 float-none">A B O U T &nbsp; G U Y<br><br>Guy Talley is an accomplished professional dedicated to creating engaging and effective learning solutions. Currently based in New York City, Guy specializes in curriculum development, eLearning, and multimedia content production. His extensive background encompasses various industries, including healthcare, finance, and education.<br><br>Guy’s career path includes significant roles such as Senior Learning Consultant at Capital One Financial Corporation, where he designed blended learning solutions, and Instructional Designer Consultant at the New York City Housing Authority, where he developed compelling training content to improve learning retention.<br><br>P E R S O N A L &nbsp; P H I L O S O P H Y<br><br><i>Guy believes in the power of education to transform lives. His approach is learner-centered, focusing on creating interactive, multimodal learning experiences that cater to diverse audiences. By staying updated with the latest trends and technologies in instructional design, Guy continually enhances his methodologies to provide innovative and impactful learning solutions.</i><br><br>C O N N E C T &nbsp; W I T H &nbsp; G U Y&nbsp;<br><br><strong>Email</strong>: <a href="mailto:guytalley@gmail.com">guytalley@hotmail.com</a><br><strong>LinkedIn</strong>: <a href="./">linkedin.com/in/guy-talley-079a49</a><br></p></div></div></div></div><!-- bloc-1 END --><!-- bloc-4 --><div class="bloc l-bloc" id="bloc-4"><div class="container bloc-no-padding-lg bloc-no-padding-md bloc-no-padding-sm bloc-no-padding"><div class="row"><div class="col text-start mb-sm-5 mt-sm-5 mt-5 mb-3"><a href="./e-learning-portfolio/" class="a-btn a-block link-style mt-lg-3 mt-md-5 mb-lg-3 mb-5">Explore Guy’s portfolio to see how his expertise can elevate your educational projects and drive impactful learning outcomes.</a><a href="./guy-talleys-resume/" class="a-btn a-block link-style mt-lg-3 mt-md-5 mt-sm-5">View Guy's Online Resume</a><a href="./contact-1/" class="a-btn a-block link-style mt-lg-3 mt-md-5 mt-sm-5 ">View Guy’s Job Search AI</a></div></div></div></div><!-- bloc-4 END --><!-- ScrollToTop Button --><button aria-label="Scroll to top button" class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1',this)"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 32 32"><path class="scroll-to-top-btn-icon" d="M30,22.656l-14-13-14,13"/></svg></button><!-- ScrollToTop Button END--><!-- bloc-34 --><div class="bloc l-bloc full-width-bloc" id="bloc-34"><div class="container bloc-no-padding-lg bloc-no-padding-md bloc-no-padding-sm bloc-no-padding"><div class="row"><div class="col text-start mb-md-4 mt-lg-4 mb-lg-1 mt-md-5 mt-sm-2"><div class="divider-h"></div></div></div></div></div><!-- bloc-34 END --><!-- bloc-5 --><div class="bloc l-bloc" id="bloc-5"><div class="container bloc-no-padding-lg bloc-no-padding"><div class="row align-items-center g-0"><div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2 col-lg-6 offset-lg-3 text-start text-lg-center"><div class="text-center container-div-margin-top pb-3 pb-lg-0"><a href="https://www.linkedin.com/in/guy-talley-079a49" target="_blank"><span class="icon-md pressed-t me-lg-3 icon-style mb-lg-3 mt-lg-3 fab fa-linkedin icon-2419"></span></a></div><h6 class="h6-style mx-auto d-block text-lg-center text-center">© 2024 Guy Talley</h6></div></div></div></div><!-- bloc-5 END --></div><!-- Main container END -->  <!-- Additional JS --><script src="./js/jquery.min.js"></script><script src="./js/all.js?8703"></script><!-- Additional JS END --></body></html>
